fix element of fire fix weight pressure info

--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -464,7 +464,7 @@ function change(str){
 
 <tr><td><span class="mcui-row"><span id="heart_of_ocean" class="prismarine_crystals" title="海洋之心"><span class="enchant">*</span></span></span></td>
 <th><strong>海洋之心</strong></th>
-<td>鱿鱼/守卫者/远古守卫者/海龟/海豚</td></tr>
+<td>鱿鱼/守卫者/远古守卫者/海龟/海豚<br />被掩埋的宝藏</td></tr>
 
 <tr><td><span class="mcui-row"><span id="soul_of_undead" class="poisonous_potato" title="亡灵之魂"><span class="enchant">*</span></span></span></td>
 <th><strong>亡灵之魂</strong></th>
@@ -482,7 +482,7 @@ function change(str){
 
 <tr><td><span class="mcui-row"><span id="spirit_of_ender" class="ender_pearl" title="末影之灵"><span class="enchant">*</span></span></span></td>
 <th><strong>末影之灵</strong></th>
-<td>末影人/末影螨/潜影贝</td></tr>
+<td>末影人/末影螨/潜影贝<br />末地城</td></tr>
 
 <tr><td><span class="mcui-row"><span class="colorful_items cow_head" title="牛头"></span></span></td>
 <th><strong>生物头颅</strong></th>
@@ -1391,7 +1391,7 @@ function change(str){
 </span><span class="gold_nugget" title="日之碎片"><span class="enchant">*</span>
 </span><span class="iron_nugget" title="月之碎片"><span class="enchant">*</span>
 </span></span><span class="mcui-row"><span class="gold_nugget" title="日之碎片"><span class="enchant">*</span>
-</span><span class="stick" title="魔杖"><span class="enchant">*</span>
+</span><span class="colorful_items magicka_wand" title="魔杖">
 </span><span class="gold_nugget" title="日之碎片"><span class="enchant">*</span>
 </span></span><span class="mcui-row"><span class="iron_nugget" title="月之碎片"><span class="enchant">*</span>
 </span><span class="gold_nugget" title="日之碎片"><span class="enchant">*</span>
@@ -2118,15 +2118,15 @@ function change(str){
 生成 驴<br />
 生成 羊驼<br />
 生成 鹦鹉<br />
-生成 海龟</th><td>骨头+凋零骷髅头颅+鸡蛋<br />
-任意生鱼+凋零骷髅头颅+鸡蛋<br />
-皮革+凋零骷髅头颅+鸡蛋<br />
-箱子+凋零骷髅头颅+鸡蛋<br />
-任意地毯+凋零骷髅头颅+鸡蛋<br />
-羽毛+凋零骷髅头颅+鸡蛋<br />
-海草+凋零骷髅头颅+鸡蛋</td><td>
+生成 海龟</th><td>骨头+骷髅头颅+鸡蛋<br />
+任意生鱼+骷髅头颅+鸡蛋<br />
+皮革+骷髅头颅+鸡蛋<br />
+箱子+骷髅头颅+鸡蛋<br />
+任意地毯+骷髅头颅+鸡蛋<br />
+羽毛+骷髅头颅+鸡蛋<br />
+海草+骷髅头颅+鸡蛋</td><td>
 <span class="mcui"><span><span class="mcui-row"><span class="bone" title="骨头">
-</span><span class="wither_skeleton_skull" title="凋零骷髅头颅">
+</span><span class="skeleton_skull" title="骷髅头颅">
 </span><span class="bone" title="骨头">
 </span></span><span class="mcui-row"><span class="bone" title="骨头">
 </span><span class="egg" title="鸡蛋">
@@ -2139,7 +2139,7 @@ function change(str){
 </span></span></span></br>
 
 <span class="mcui"><span><span class="mcui-row"><span class="feather" title="羽毛">
-</span><span class="wither_skeleton_skull" title="凋零骷髅头颅">
+</span><span class="skeleton_skull" title="骷髅头颅">
 </span><span class="feather" title="羽毛">
 </span></span><span class="mcui-row"><span class="feather" title="羽毛">
 </span><span class="egg" title="鸡蛋">
